# django_project_stepik

./: pyproject.toml
myproject/: db.sqlite3
myproject/myproject/: settings.py
