[tool.poetry]
name = "django-stepik-project"
version = "0.1.0"
description = ""
authors = ["MikoJIa <Kolya_popov_86@tut.by>"]
readme = "README.md"
packages = [{include = "django_stepik_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
